--- a/Style.css
+++ b/Style.css
@@ -1,26 +1,25 @@
 * {
-    
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 
 body {
-    background-color: #FFA725;
-    color: #FFF5E4;
+    background-color: #191825;
+}
+h1 {
+    color: #E384FF;
     text-align: center;
+    font-size: 50px;
+}
+.container {
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
-
-.container {
-    height: 70vh;
-    margin-top: 10px;
     
-
 }
-.Game {
+.game {
+   
     height: 60vh;
     width: 60vh;
     display: flex;
@@ -28,21 +27,13 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1.5vmin;
-    margin-top: 10px;
-
-    
-
     
 }
 .box {
     height: 18vh;
     width: 18vh;
-    margin-top: 10px;
+    font-size: 90px;
     border-radius: 1rem;
     border: none;
-    box-shadow: 0 0 1rem rgba(0,0,0,0.2);
-    font-size: 90px;
-    
-    
-    
+    box-shadow: 0px 0px 30px 10px rgba(255, 255, 150, 0.6);
 }
