--- a/Style.css
+++ b/Style.css
@@ -18,6 +18,7 @@ h1 {
     justify-content: center;
     align-items: center;
     
+    
 }
 .game {
    
@@ -29,6 +30,9 @@ h1 {
     align-items: center;
     gap: 1.5vmin;
     
+   
+    
+    
 }
 .box {
     height: 18vh;
@@ -36,8 +40,10 @@ h1 {
     font-size: 40px;
     border-radius: 1rem;
     border: none;
+    background-color: lightblue;
+    color: #191825;
     box-shadow: 0px 0px 30px 10px rgba(255, 255, 150, 0.6);
-}
+} 
 
 #reset {
     background-color: black;
@@ -48,4 +54,12 @@ h1 {
     border: none;
     border-radius: 0.4rem;
     box-shadow: 0px 0px 10px 1px; 
+}
+.msg-winner {
+    color: white;
+    font-size: 8vmin;
+}
+
+.hide {
+    display: none;
 }
