--- a/Style.css
+++ b/Style.css
@@ -55,11 +55,14 @@ h1 {
     border-radius: 0.4rem;
     box-shadow: 0px 0px 10px 1px; 
 }
-.msg-winner {
+.msg-container {
     color: white;
     font-size: 8vmin;
 }
 
 .hide {
     display: none;
+}
+p {
+    font-size: 10px;
 }
